--- a/index.html
+++ b/index.html
@@ -8,70 +8,45 @@
 	<link rel="stylesheet" type="text/css" href="fonts/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrapValidator.min.css">
+    <link href="css/bootstrap-material-design.css" rel="stylesheet">
+    <link href="css/ripples.min.css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
-<style>
-.carousel-inner > .item > img,
-.carousel-inner > .item > a > img {
-  width: 70%;
-  margin: auto;
-}
-</style>
+	<script src="js/material.js"></script>
+    <script src="js/ripples.min.js"></script>
+    <script>
+      $.material.init();
+    </script>
 </head>
 <body>
-<div id="menu" class="row" style="padding: 20px">
-     <div class="col-lg-12">
-	   <img src="img/logo.png" style="width: 20%">
+<div id="menu" class="col-lg-12 parallaxheader" style="padding: 20px;">
+     <div class="row-picture ">
+	   <center><img src="img/logo.png" style="width: 20%;padding-top: 15%"></center>
+	 </div>
+	 <div style="padding-top: 100px;">
+	 	<center><a href=""><i class="fa fa-arrow-circle-down fa-5x" aria-hidden="true"></i></a></center>
 	 </div>
 </div>
-<div id="slider" class="row" style="padding-bottom: 20px;">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="img/logo.png" alt="Chania" width="460" height="345">
-      </div>
+<div id="descripcion" class="col-lg-12 col-sm-12 col-md-12 col-xs-12" style="background-color: #fff">
 
-      <div class="item">
-        <img src="img/logo.png" alt="Chania" width="460" height="345">
-      </div>
-    
-      <div class="item">
-        <img src="img/logo.png" alt="Flower" width="460" height="345">
-      </div>
+<div class="jumbotron container well bs-component">
+  <h1>Jumbotron</h1>
 
-      <div class="item">
-        <img src="img/logo.png" alt="Flower" width="460" height="345">
-      </div>
-    </div>
+  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div><!--SLIDER-->
+  <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+</div>
+	
+</div>
 
-<div class="row contacto">
+
+<div class="col-lg12 col-sm-12 col-md-12 col-xs-12 parallax">
 <div class="container desc" style="padding: 0%;">
 <div class="col-lg-5 col-md-8 col-sm-12 col-xs-12">
-<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 espaciotitu">
+<div class="col-lg-12 col-md-12 col-sm-8 col-xs-12 espaciotitu">
 <span><h3 class="textjustify textwhite">Nos interesa mucho tu opinión, envíanos tus comentarios y sugerencias.</h3></span>
 <span><h1 class="textcenter textwhite"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></h1></span>
 <span><h1 class="textcenter textwhite" id="saludo"></h1></span>
@@ -80,13 +55,11 @@
 
 
 </div>
-<div class="col-lg-7 col-md-4 col-sm-12 col-xs-12 tituformulario" style="padding: 0%;">
-<div class="">
-<div class="shadow">
-<h4 class="textwhite espacioshadow textpadding">Contáctanos</h4>
+<div class="col-lg-7 col-md-4 col-sm-4 col-xs-12 panel panel-primary" style="padding: 0%;">
+<div class="panel-heading">
+<h4 class="panel-title espacioshadow textpadding">Contáctanos</h4>
 </div>
-</div>
-<form id="contacto" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 formulario" style="padding: 0%; margin: 0%;" method="POST">
+<form id="contacto" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 panel-body well bs-component" style="padding: 0%; margin: 0%;" method="POST">
 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 espacioboton ">
 <div class="form-group espacioform col-lg-12">
 <input class="form-control" name="correo" id="correo" type="text" placeholder="Correo electrónico" style="border-radius: 0px;" />
@@ -99,7 +72,7 @@
 </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 form-group ">
-<div class="form-group espacioform col-lg-12">
+<div class="form-group  col-lg-12">
 <input class="form-control" name="asunto" id="asunto" type="text" placeholder="Asunto" style="border-radius: 0px;" />
 </div>
 <div class="form-group  col-lg-12">
@@ -108,13 +81,18 @@
   <div class="form-group col-lg-12"><textarea class="form-control" rows="5" name="comentario" id="comentario" placeholder="Redacte su mensaje aquí..." style="border-radius: 0px;"></textarea></div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 formularioboton">
-<div class="textcenter espaciop col-lg-6"><button id="btnenviar" class="btns" name="btnenviar">Contactar</button>
+<div class="textcenter espaciop col-lg-6"><button id="btnenviar" class="btn btn-raised btn-primary" name="btnenviar">Contactar</button>
 </div>
 
 </div>
 </form><!--formulario-->
 </div>
 </div><!--desc-->
+</div><!--Contacto-->
+
+
+<div id="pie" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 panel-footer" style="padding: 0;height: 100px">
+
 </div>
 </body>
 <script type="text/javascript">
