--- a/index.html
+++ b/index.html
@@ -4,72 +4,146 @@
 	<title>Front and Back</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/card.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="fonts/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrapValidator.min.css">
-    <link href="css/bootstrap-material-design.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-material-design.css">
     <link href="css/ripples.min.css" rel="stylesheet">
-	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
-	<script src="js/material.js"></script>
-    <script src="js/ripples.min.js"></script>
-    <script>
-      $.material.init();
-    </script>
 </head>
 <body>
-<div id="menu" class="col-lg-12 parallaxheader" style="padding: 20px;">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="#inicio">Front and Back</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#inicio"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#inicio">Inicio</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#nosotros">Nosotros</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#contacto">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+
+<div id="inicio" class="col-lg-12 parallaxheader" style="padding: 20px;">
      <div class="row-picture ">
-	   <center><img src="img/logo.png" style="width: 20%;padding-top: 15%"></center>
+	   <center><img src="img/logo2.png" style="width: 20%;padding-top: 15%"></center>
 	 </div>
-	 <div style="padding-top: 100px;">
-	 	<center><a href=""><i class="fa fa-arrow-circle-down fa-5x" aria-hidden="true"></i></a></center>
-	 </div>
+	 <div class="intro-text">
+                        <center><span class="name"><h1 class="textheader">Front and Back</h1></span></center>
+                    </div>
 </div>
 
-<div id="descripcion" class="col-lg-12 col-sm-12 col-md-12 col-xs-12" style="background-color: #fff">
-
-<ul class="nav nav-tabs" style="margin-bottom: 15px;">
-  <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-  <li><a href="#profile" data-toggle="tab">Profile</a></li>
-  <li class="disabled"><a>Disabled</a></li>
-  <li class="dropdown">
-    <a class="dropdown-toggle" data-toggle="dropdown" href="bootstrap-elements.html" data-target="#">
-      Dropdown <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu">
-      <li><a href="#dropdown1" data-toggle="tab">Action</a></li>
-      <li class="divider"></li>
-      <li><a href="#dropdown2" data-toggle="tab">Another action</a></li>
-    </ul>
-  </li>
-</ul>
-<div id="myTabContent" class="tab-content">
-  <div class="tab-pane fade active in" id="home">
-    <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-  </div>
-  <div class="tab-pane fade" id="profile">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div>
-  <div class="tab-pane fade" id="dropdown1">
-    <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
-  </div>
-  <div class="tab-pane fade" id="dropdown2">
-    <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
-  </div>
-</div>
-	
+<div id="nosotros" class="col-lg-12 col-sm-12 col-md-12 col-xs-12" style="background-color: #fff">
+<div id="title">
+	<a class="box"> 
+        <div class="content">
+			<h2>
+				My Amazing Title
+			</h2>
+			<p class="description pcard
+			">
+				Some description text here of the title that displays on hover
+				<span class="link">Click to read more >> </span>
+			</p>
+			
+    	</div>
+	</a>
 </div>
 
+<div>
+	 <div class="container" style="padding-top: 130px;margin-bottom:48px;">
+        <div class="row">
+            <div class="team">
+                <div class="teamimgcharly"></div>
+                <h4 style="text-align:center;margin-bottom: 2px;margin-top: 25px;">Israel Rodriguez</h4>
+                <p style="text-align:center;">FRONT END DEVELOPER / CO-FOUNDER</p>
+                <div class="teamsocial">
+                    <ul>
+                        <li style="margin-left:35px;float:left;list-style: none outside none;">
+                            <a href="#" title="Facebook">
+                                <div class="facebook-team">
+                                	<i class="fa fa-facebook"></i>
+                                </div>
+                            </a>
+                        </li>
+                        <li style="float:left;list-style: none outside none;">
+                            <a href="#" title="Twitter">
+                                <div class="twitter-team"><i class="fa fa-twitter"></i></div>
+                            </a>
+                        </li>
+                        <li style="float:left;list-style: none outside none;">
+                            <a href="#" title="Google">
+                                <div class="google-team">
+                                	<i class="fa fa-google-plus"></i>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="team">
+                 <div class="teamimgbeto"></div>
+                <h4 style="text-align:center;margin-bottom: 2px;margin-top: 25px;">Alberto Martinez</h4>
+                <p style="text-align:center;">BACK END DEVELOPER / CO-FOUNDER</p>
+                <div class="teamsocial col-lg-12">
+                    <ul>
+                        <li style="margin-left:35px;float:left;list-style: none outside none;">
+                            <a href="#" title="Facebook">
+                                <div class="facebook-team">
+                                	<i class="fa fa-facebook"></i>
+                                </div>
+                            </a>
+                        </li>
+                        <li style="float:left;list-style: none outside none;">
+                            <a href="#" title="Twitter">
+                                <div class="twitter-team"><i class="fa fa-twitter"></i></div>
+                            </a>
+                        </li>
+                        <li style="float:left;list-style: none outside none;">
+                            <a href="#" title="Google">
+                                <div class="google-team">
+                                	<i class="fa fa-google-plus"></i>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div>
 
-<div class="col-lg12 col-sm-12 col-md-12 col-xs-12 parallax">
-<div class="container desc" style="padding: 0%;">
+</div>
+
+
+<div id="contacto" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 parallaxcontacto">
+<div class="container contacto" style="padding: 0%;">
 <div class="col-lg-5 col-md-8 col-sm-12 col-xs-12">
 <div class="col-lg-12 col-md-12 col-sm-8 col-xs-12 espaciotitu">
-<span><h3 class="textjustify textwhite">Nos interesa mucho tu opinión, envíanos tus comentarios y sugerencias.</h3></span>
+<span><h3 class="textjustify textwhite">Contesta el formulario, nosotros nos comunicaremos contigo.</h3></span>
 <span><h1 class="textcenter textwhite"><i class="fa fa-envelope fa-4x" aria-hidden="true"></i></h1></span>
 <span><h1 class="textcenter textwhite" id="saludo"></h1></span>
 </div>
@@ -77,30 +151,30 @@
 
 
 </div>
-<div class="col-lg-7 col-md-4 col-sm-4 col-xs-12 panel panel-primary" style="padding: 0%;">
+<div class="col-lg-7 col-md-4 col-sm-4 col-xs-12 panel panel-primary well bs-component" style="padding: 0%;">
 <div class="panel-heading">
 <h4 class="panel-title espacioshadow textpadding">Contáctanos</h4>
 </div>
-<form id="contacto" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 panel-body well bs-component" style="padding: 0%; margin: 0%;" method="POST">
-<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 espacioboton ">
-<div class="form-group espacioform col-lg-12">
-<input class="form-control" name="correo" id="correo" type="text" placeholder="Correo electrónico" style="border-radius: 0px;" />
+<form id="contacto" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 panel-body" style="padding: 0%; margin: 0%;" method="POST">
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
+<div class="form-group col-lg-12">
+<input class="form-control" name="correo" id="correo" type="text" placeholder="Correo electrónico" />
 </div>
 <div class="form-group  col-lg-12">
-<input class="form-control" name="nombre" id="nombre" type="text" placeholder="Nombres(s)" style="border-radius: 0px;" />
+<input class="form-control" name="nombre" id="nombre" type="text" placeholder="Nombres(s)" />
 </div>
 <div class="form-group  col-lg-12">
-<input class="form-control" name="apellido" id="apellido" type="text" placeholder="Apellido" style="border-radius: 0px;" />
+<input class="form-control" name="apellido" id="apellido" type="text" placeholder="Apellido" />
 </div>
 </div>
-<div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 form-group ">
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 form-group ">
 <div class="form-group  col-lg-12">
-<input class="form-control" name="asunto" id="asunto" type="text" placeholder="Asunto" style="border-radius: 0px;" />
+<input class="form-control" name="asunto" id="asunto" type="text" placeholder="Asunto" />
 </div>
 <div class="form-group  col-lg-12">
-<input class="form-control" name="titulo" id="titulo" type="text" placeholder="Título" style="border-radius: 0px;" />
+<input class="form-control" name="titulo" id="titulo" type="text" placeholder="Título" />
 </div>
-  <div class="form-group col-lg-12"><textarea class="form-control" rows="5" name="comentario" id="comentario" placeholder="Redacte su mensaje aquí..." style="border-radius: 0px;"></textarea></div>
+  <div class="form-group col-lg-12"><textarea class="form-control" rows="5" name="comentario" id="comentario" placeholder="Redacte su mensaje aquí..."></textarea></div>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 formularioboton">
 <div class="textcenter espaciop col-lg-6"><button id="btnenviar" class="btn btn-raised btn-primary" name="btnenviar">Contactar</button>
@@ -113,10 +187,59 @@
 </div><!--Contacto-->
 
 
-<div id="pie" class="col-lg-12 col-sm-12 col-md-12 col-xs-12 panel-footer" style="padding: 0;height: 100px">
-
-</div>
+<!-- Footer -->
+    <footer class="text-center" style="background-color: #2C3E50 !important;">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3>Ubicacion</h3>
+                        <p>Fracc.la luna Calle 50 Mz-23 Lt-17
+                            <br>Cancún Quintana Roo</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3>Redes Sociales</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="www.facebook.com" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3><a href="http://www.frontandback.com.mx">Front and Back</a></h3>
+                        <p> somos una empresa dedicada a la creacion y venta de paginas web.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-below">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        Copyright &copy; http://wwww.frontandback.com.mx 2016
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
+<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/bootstrapValidator.min.js"></script>
+	<script src="js/material.js"></script>
+    <script src="js/ripples.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/freelancer.min.js"></script>
+    <script>
+      $.material.init();
+    </script>
 <script type="text/javascript">
 $(document).ready(function() {
     Reloj();
