--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Front and Back</title>
-	<meta charset="utf-8">
+	  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="img/icono.ico">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/card.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="fonts/css/font-awesome.min.css">
+	  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	  <link rel="stylesheet" type="text/css" href="fonts/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="css/bootstrap-material-design.css">
     <link href="css/ripples.min.css" rel="stylesheet">
